# magnitude

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  opencode.json  package.json  tsconfig.json  turbo.json  vitest.workspace.ts
.changeset/: blue-candles-lie.md  config.json  dry-bushes-take.md  eager-ravens-study.md  early-beers-ask.md  eight-dancers-beg.md  eight-wombats-do.md  fair-deserts-strive.md  fast-trees-accept.md  fine-things-invent.md  hip-ads-sleep.md  pre.json  (+16 more)
inference/: AGENTS.md  Cargo.toml  README.md  native-pin.toml  package.json  tsconfig.json
inference/benchmark/: README.md
inference/benchmark/fixtures/: core.json
inference/benchmark/profiles/: cache-development.toml  concurrency-c4-diagnostic.toml  concurrency-development.toml  controlled.toml  development.toml  direct-llamacpp-cache.toml  fanout-development.toml  mixed-development.toml  public.toml  smoke.toml  variance-short-paired.toml  variance-short.toml
inference/crates/benchmark-runner/: Cargo.toml
inference/crates/benchmark-runner/src/: client.rs  lib.rs  main.rs  model.rs  report.rs  runner.rs  stats.rs  suite.rs
inference/crates/icn-api/: Cargo.toml
inference/crates/icn-api/src/: inventory_schema.rs  lib.rs  media.rs
inference/crates/icn-contracts/: Cargo.toml
inference/crates/icn-contracts/src/: inventory.rs  lib.rs  models.rs  output.rs
inference/crates/icn-core/: Cargo.toml
inference/crates/icn-core/src/: lib.rs  output.rs
inference/crates/icn-engine/: Cargo.toml
inference/crates/icn-engine/src/: lib.rs  multimodal.rs  parity_probe.rs  radix_cache.rs  scheduler.rs
inference/crates/icn-fit/: Cargo.toml  README.md
inference/crates/icn-fit/src/: lib.rs  main.rs
inference/crates/icn-hardware/: Cargo.toml  README.md
inference/crates/icn-hardware/src/: lib.rs  main.rs
inference/crates/icn-llamacpp/: Cargo.toml
inference/crates/icn-llamacpp/src/: lib.rs  multimodal.rs  parity_probe.rs  scheduler.rs
inference/crates/icn-models/: Cargo.toml
inference/crates/icn-models/src/: cache.rs  capabilities.rs  catalog.rs  download.rs  download_service.rs  gguf.rs  identity.rs  inventory.rs  legacy.rs  lib.rs  manifest.rs  package_service.rs  preview.rs  service.rs  validation.rs
inference/crates/icn-mtp/: Cargo.toml
inference/crates/icn-mtp/src/: lib.rs
inference/crates/icn-parity/: Cargo.toml
inference/crates/icn-parity-probe/: Cargo.toml
inference/crates/icn-parity-probe/src/: lib.rs  main.rs
inference/crates/icn-parity/src/: assets.rs  compare.rs  decode.rs  digest.rs  lib.rs  main.rs  model.rs  models.rs  process.rs  protocol.rs  provenance.rs  runner.rs  store.rs  tools.rs
inference/crates/icn-reasoning/: Cargo.toml
inference/crates/icn-reasoning/src/: lib.rs
inference/crates/icn-server/: Cargo.toml  build.rs
inference/crates/icn-server/src/: build_identity.rs  load_progress.rs  main.rs  telemetry.rs
inference/crates/icn-utils/: Cargo.toml
inference/crates/icn-utils/src/: file_cache.rs  lib.rs
inference/parity/: README.md  producers.toml
inference/parity/cases/correctness/baseline/: focused-upstream-tests.json
inference/parity/cases/correctness/cancellation/: decode-abort-recovery.json  decode-abort.json
inference/parity/cases/correctness/chat-template/: chatml-basic.json
inference/parity/cases/correctness/config/: context-defaults.json
inference/parity/cases/correctness/decode/: single-batch-logits.json
inference/parity/cases/correctness/fidelity/: tiny-corpus-perplexity.json
inference/parity/cases/correctness/grammar/: json-schema-boolean-object.json
inference/parity/cases/correctness/metadata/: stable-fields.json
inference/parity/cases/correctness/mtmd/: preprocess-structure.json
inference/parity/cases/correctness/parser/: content-only-unicode.json
inference/parity/cases/correctness/reasoning-budget/: controllable-force.json
inference/parity/cases/correctness/sampler/: distribution-four-seeded.json  top-k-three.json
inference/parity/cases/correctness/state/: remove-and-redecode.json
inference/parity/cases/correctness/tokenizer/: token-to-piece-unicode-bytes.json  unicode-special-flags.json
inference/parity/cases/performance/backend-ops/: native-perf-qualification.json
inference/parity/cases/performance/batched-bench/: two-sequence-independent-prompts.json
inference/parity/cases/performance/chat-template/: chatml-basic.json
inference/parity/cases/performance/llama-bench/: context-depth-128.json  generation-128.json  prompt-512.json  prompt-generation-128-32.json
inference/parity/cases/performance/parser/: content-only.json
inference/parity/cases/performance/sampler/: top-k-large-vector.json
inference/parity/fixtures/corpora/: tiny-fidelity.txt
inference/parity/fixtures/grammar/: boolean-object-vectors.json  boolean-object.gbnf  boolean-object.schema.json
inference/parity/fixtures/logits/: upstream-sampling-basic.json
inference/parity/fixtures/parser/: content-replay.json
inference/parity/fixtures/templates/: chatml-basic-input.json  chatml-basic.jinja
inference/parity/models/: registry.toml
inference/parity/oracle/: CMakeLists.txt  README.md  inject.cmake  main.cpp  smoke.jsonl
inference/parity/profiles/: batched-bench-diagnostic.toml  diagnostic.toml  native-diagnostic.toml  nightly.toml  pr.toml  release.toml
inference/parity/schemas/: case.schema.json  comparison.schema.json  evidence.schema.json
inference/parity/upstream/: README.md  binding-surfaces.json  build-profiles.toml  targets.toml
inference/results/: README.md
inference/scripts/: build-binary.test.ts  build-binary.ts  build-candidate.test.ts  build-candidate.ts  build-local.test.ts  build-local.ts  build-parity-config.ts  build-reference.test.ts  build-reference.ts  controlled-environment.test.ts  controlled-environment.ts  ctest-evidence.test.ts  ctest-evidence.ts  generated-paths.test.ts  source-inventory.test.ts  source-inventory.ts  test-upstream.ts  upstream-model-fixture.test.ts  upstream-model-fixture.ts  verify-bridge-manifest.ts  verify-native-pin.ts  verify-safe-binding-boundary.ts
(+1179 files in other folders)
