[workspace]
members = ["crates/benchmark-runner", "crates/icn-api", "crates/icn-contracts", "crates/icn-engine", "crates/icn-hardware", "crates/icn-models", "crates/icn-mtp", "crates/icn-parity", "crates/icn-parity-probe", "crates/icn-reasoning", "crates/icn-server", "crates/icn-utils"]
exclude = ["native/llama-cpp-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.12.1"
clap = { version = "4.5.54", features = ["derive"] }
encoding_rs = "0.8.35"
futures-util = "0.3.31"
fs2 = "0.4.3"
getrandom = "0.4.3"
hf-hub = { version = "1.0.0", features = ["rustls-tls"] }
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
icn-api = { path = "crates/icn-api" }
icn-contracts = { path = "crates/icn-contracts" }
icn-engine = { path = "crates/icn-engine", default-features = false }
icn-hardware = { path = "crates/icn-hardware", default-features = false }
icn-models = { path = "crates/icn-models" }
icn-mtp = { path = "crates/icn-mtp", default-features = false }
icn-reasoning = { path = "crates/icn-reasoning" }
icn-utils = { path = "crates/icn-utils" }
llama-cpp-2 = { path = "native/llama-cpp-rs/llama-cpp-2", default-features = false, features = ["common"] }
libc = "0.2.180"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
toml = "0.9.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order"] }
utoipa-axum = "0.2.0"
