[package]
name = "icn-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }
