[package]
name = "icn-fit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "icn-fit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
icn-core.workspace = true
llama-cpp-2 = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
