[package]
name = "icn-hardware"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "icn-fit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
icn-contracts.workspace = true
llama-cpp-2 = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
mtmd = ["llama-cpp-2/mtmd"]
vulkan = ["llama-cpp-2/vulkan"]
