[package]
name = "icn-llamacpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
encoding_rs.workspace = true
icn-core.workspace = true
llama-cpp-2.workspace = true

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
