[package]
name = "icn-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
fs2.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hf-hub.workspace = true
icn-contracts.workspace = true
icn-utils.workspace = true
llama-cpp-2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "time"] }
tempfile = "3.24.0"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
