[package]
name = "icn-parity-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Production ICN primitive parity probe"

[[bin]]
name = "icn-probe"
path = "src/main.rs"

[dependencies]
icn-llamacpp = { workspace = true, features = ["parity-probe"] }
serde.workspace = true
serde_json.workspace = true

[features]
default = ["cpu"]
cpu = []
metal = ["icn-llamacpp/metal"]
cuda = ["icn-llamacpp/cuda"]
vulkan = ["icn-llamacpp/vulkan"]
mtmd = ["icn-llamacpp/mtmd"]
