[package]
name = "icn-parity-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Production ICN primitive parity probe"

[[bin]]
name = "icn-probe"
path = "src/main.rs"

[dependencies]
icn-engine = { workspace = true, features = ["parity-probe"] }
serde.workspace = true
serde_json.workspace = true

[features]
default = ["cpu"]
cpu = []
metal = ["icn-engine/metal"]
cuda = ["icn-engine/cuda"]
vulkan = ["icn-engine/vulkan"]
mtmd = ["icn-engine/mtmd"]
