[package]
name = "icn-parity"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fork-independent primitive parity runner for ICN and pinned llama.cpp"

[[bin]]
name = "icn-parity"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
globset = "0.4.18"
jsonschema = { version = "0.37.1", default-features = false }
libc = "0.2.180"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "stream"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.9.8"

[dev-dependencies]
assert_matches = "1.5.0"
