[package]
name = "icn-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
getrandom.workspace = true
icn-contracts.workspace = true
llama-cpp-2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
