[package]
name = "icn-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "magnitude-icn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
icn-api.workspace = true
icn-core.workspace = true
icn-llamacpp.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["mtmd"]
cuda = ["icn-llamacpp/cuda"]
metal = ["icn-llamacpp/metal"]
mtmd = ["icn-llamacpp/mtmd"]
vulkan = ["icn-llamacpp/vulkan"]
