[package]
name = "icn-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "magnitude-icn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
icn-api.workspace = true
icn-contracts.workspace = true
icn-engine.workspace = true
icn-hardware.workspace = true
icn-models.workspace = true
icn-mtp.workspace = true
icn-reasoning.workspace = true
libc.workspace = true
llama-cpp-2.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["mtmd"]
cuda = ["icn-engine/cuda", "icn-hardware/cuda", "icn-mtp/cuda"]
metal = ["icn-engine/metal", "icn-hardware/metal", "icn-mtp/metal"]
mtmd = ["icn-engine/mtmd", "icn-hardware/mtmd"]
vulkan = ["icn-engine/vulkan", "icn-hardware/vulkan", "icn-mtp/vulkan"]

[dev-dependencies]
tempfile = "3.24.0"
